			- Supports Tint + Color
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
. [NEW] Macros: ccgl* replaced with ccGL*
. [NEW] Math: Using kazmath for matrix and projection operations, and matrix GL stack
. [NEW] Math: Using NEON Matrix Multiplication from Oolong project
. [NEW] Types: ccColor?B replaced with ccColor?UB
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] CCProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] TextureCache: Uses "self" instead of "CCTextureCache" in shared instance
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF
. [FIX] Xcode: TouchJSON: Removed. No longer needed since cocosLive was removed
. [FIX] Xcode: Tremor / vorbis: Removed. Experimental sound engine is no longer supported
. [FIX] Xcode: iOS 4 is minimun required to run

version 1.0.0 -
. [NEW] ccpSegmentIntersect & ccpPointIntersect: Added helper functions for ccpLineIntersect (issue #1193)
. [NEW] Scheduler: Added isTargetPaused method
. [NEW] Sprite: Debugging draw for texture (issue #879)
. [NEW] Textures: PVR supports NPOT textures
. [FIX] CCArray: ForEach prepends "__" to inner variables to prevent conflict
. [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
. [FIX] cocosLive: fixed memory leak in ScoreServerPost
. [FIX] Director: Added asserts to prevent calling startAnimation twice.
. [FIX] Tests: Fixed memory leak in ParticleTest
. [FIX] Tests: Fixed memory leak in cocosLiveTest
. [FIX] TouchDispatcher: added setPriority (issue #757)
. [FIX] Xcode: cocos2d compiles OK with Xcode 4.2 + llvm 3.0

version 1.0-rc3 - 31-May-2011
. [NEW] Actions: Added SkewTo and SkewBy actions
. [NEW] LabelTTF: Added support for LineBreakMode. Mac only supports Word-Break.