@@ -127,8 +127,6 @@ int compareInts (const void * a, const void * b);
 /* The layer recognizes some special properties, like cc_vertez */
 -(void) parseInternalProperties;
 
--(NSInteger) vertexZForPos:(CGPoint)pos;
-
 // index
 -(NSUInteger) atlasIndexForExistantZ:(NSUInteger)z;
 -(NSUInteger) atlasIndexForNewZ:(NSUInteger)z;
@@ -184,11 +182,6 @@ int compareInts (const void * a, const void * b);
 		atlasIndexArray_ = ccCArrayNew(totalNumberOfTiles);
 		
 		[self setContentSize:CC_SIZE_PIXELS_TO_POINTS(CGSizeMake( layerSize_.width * mapTileSize_.width, layerSize_.height * mapTileSize_.height ))];
-		
-		useAutomaticVertexZ_= NO;
-		vertexZvalue_ = 0;
-		alphaFuncValue_ = 0;
-
 	}
 	return self;
 }
@@ -280,18 +273,7 @@ int compareInts (const void * a, const void * b);
 
 -(void) parseInternalProperties
 {
-	// if cc_vertex=automatic, then tiles will be rendered using vertexz
-
-	NSString *vertexz = [self propertyNamed:@"cc_vertexz"];
-	if( vertexz ) {
-		if( [vertexz isEqualToString:@"automatic"] )
-			useAutomaticVertexZ_ = YES;
-		else
-			vertexZvalue_ = [vertexz intValue];
-	}
-	
-	NSString *alphaFuncVal = [self propertyNamed:@"cc_alpha_func"];
-	alphaFuncValue_ = [alphaFuncVal floatValue];
+	NSAssert( ! [self propertyNamed:@"cc_vertexz"], @"cocos2d 2.x doesn't support cc_vertez");
 }
 
 #pragma mark CCTMXLayer - obtaining tiles/gids
@@ -316,7 +298,6 @@ int compareInts (const void * a, const void * b);
 			
             CGPoint p = [self positionAt:pos];
             [tile setPosition:CC_POINT_PIXELS_TO_POINTS(p)];
-			[tile setVertexZ: [self vertexZForPos:pos]];
 			tile.anchorPoint = CGPointZero;
 			[tile setOpacity:opacity_];
 			
@@ -352,7 +333,6 @@ int compareInts (const void * a, const void * b);
 	
     CGPoint p = [self positionAt:pos];
     [reusedTile_ setPosition:CC_POINT_PIXELS_TO_POINTS(p)];
-	[reusedTile_ setVertexZ: [self vertexZForPos:pos]];
     [reusedTile_ setAnchorPoint:CGPointZero];
     [reusedTile_ setOpacity:opacity_];
 	
@@ -391,7 +371,6 @@ int compareInts (const void * a, const void * b);
 	
     CGPoint p = [self positionAt:pos];
     [reusedTile_ setPosition:CC_POINT_PIXELS_TO_POINTS(p)];
-	[reusedTile_ setVertexZ: [self vertexZForPos:pos]];
     [reusedTile_ setAnchorPoint:CGPointZero];
 	[reusedTile_ setOpacity:opacity_];
 	
@@ -422,7 +401,6 @@ int compareInts (const void * a, const void * b);
 	
     CGPoint p = [self positionAt:pos];
     [reusedTile_ setPosition:CC_POINT_PIXELS_TO_POINTS(p)];
-	[reusedTile_ setVertexZ: [self vertexZForPos:pos]];
     [reusedTile_ setAnchorPoint:CGPointZero];
 	[reusedTile_ setOpacity:opacity_];
 	
@@ -631,45 +609,5 @@ int compareInts (const void * a, const void * b)
 	return xy;
 }
 
--(NSInteger) vertexZForPos:(CGPoint)pos
-{
-	NSInteger ret = 0;
-	NSUInteger maxVal = 0;
-	if( useAutomaticVertexZ_ ) {
-		switch( layerOrientation_ ) {
-			case CCTMXOrientationIso:
-				maxVal = layerSize_.width + layerSize_.height;
-				ret = -(maxVal - (pos.x + pos.y));
-				break;
-			case CCTMXOrientationOrtho:
-				ret = -(layerSize_.height-pos.y);
-				break;
-			case CCTMXOrientationHex:
-				NSAssert(NO,@"TMX Hexa zOrder not supported");
-				break;
-			default:
-				NSAssert(NO,@"TMX invalid value");
-				break;
-		}
-	} else
-		ret = vertexZvalue_;
-	
-	return ret;
-}
-
-#pragma mark CCTMXLayer - draw
-
--(void) draw
-{
-	if( useAutomaticVertexZ_ ) {
-		glEnable(GL_ALPHA_TEST);
-		glAlphaFunc(GL_GREATER, alphaFuncValue_);
-	}
-	
-	[super draw];
-	
-	if( useAutomaticVertexZ_ )
-		glDisable(GL_ALPHA_TEST);
-}
 @end
 
