@@ -17,8 +17,6 @@ static NSString *transitions[] = {
     
 	@"TMXIsoZorder",
 	@"TMXOrthoZorder",
-	@"TMXIsoVertexZ",
-	@"TMXOrthoVertexZ",	
 	@"TMXOrthoTest",
 	@"TMXOrthoTest2",
 	@"TMXOrthoTest3",
@@ -1153,155 +1151,6 @@ Class restartAction()
 -(NSString *) title
 {
 	return @"TMX Ortho Zorder";
-}
-
--(NSString *) subtitle
-{
-	return @"Sprite should hide behind the trees";
-}
-@end
-
-#pragma mark -
-#pragma mark TMXIsoVertexZ
-
-@implementation TMXIsoVertexZ
--(id) init
-{
-	if( (self=[super init]) ) {
-		
-		CCTMXTiledMap *map = [CCTMXTiledMap tiledMapWithTMXFile:@"TileMaps/iso-test-vertexz.tmx"];
-		[self addChild:map z:0 tag:kTagTileMap];
-		
-		CGSize s = map.contentSize;
-		NSLog(@"ContentSize: %f, %f", s.width,s.height);
-
-		[map setPosition:ccp(-s.width/2,0)];
-
-		// because I'm lazy, I'm reusing a tile as an sprite, but since this method uses vertexZ, you
-		// can use any CCSprite and it will work OK.
-		CCTMXLayer *layer = [map layerNamed:@"Trees"];
-		tamara = [layer tileAt:ccp(29,29)];
-		[tamara retain];
-		
-		id move = [CCMoveBy actionWithDuration:10 position:ccpMult( ccp(300,250), 1/CC_CONTENT_SCALE_FACTOR() ) ];
-		id back = [move reverse];
-		id seq = [CCSequence actions:move, back, nil];
-		[tamara runAction: [CCRepeatForever actionWithAction:seq]];
-		
-		[self schedule:@selector(repositionSprite:)];
-		
-	}	
-	return self;
-}
-
--(void) dealloc
-{
-	[tamara release];
-	[super dealloc];
-}
-
--(void) repositionSprite:(ccTime)dt
-{
-	// tile height is 64x32
-	// map size: 30x30
-	CGPoint p = [tamara position];
-    p = CC_POINT_POINTS_TO_PIXELS(p);
-	[tamara setVertexZ: -( (p.y+32) /16) ];
-}
-
--(void) onEnter
-{
-	[super onEnter];
-	
-	// TIP: 2d projection should be used
-	[[CCDirector sharedDirector] setProjection:kCCDirectorProjection2D];
-}
-
--(void) onExit
-{
-	// At exit use any other projection. 
-	//	[[CCDirector sharedDirector] setProjection:kCCDirectorProjection3D];
-	[super onExit];
-}
-
--(NSString *) title
-{
-	return @"TMX Iso VertexZ";
-}
-
--(NSString *) subtitle
-{
-	return @"Sprite should hide behind the trees";
-}
-@end
-
-#pragma mark -
-#pragma mark TMXOrthoVertexZ
-
-@implementation TMXOrthoVertexZ
--(id) init
-{
-	if( (self=[super init]) ) {
-		
-		CCTMXTiledMap *map = [CCTMXTiledMap tiledMapWithTMXFile:@"TileMaps/orthogonal-test-vertexz.tmx"];
-		[self addChild:map z:0 tag:kTagTileMap];
-		
-		CGSize s = map.contentSize;
-		NSLog(@"ContentSize: %f, %f", s.width,s.height);
-		
-		// because I'm lazy, I'm reusing a tile as an sprite, but since this method uses vertexZ, you
-		// can use any CCSprite and it will work OK.
-		CCTMXLayer *layer = [map layerNamed:@"trees"];
-		
-		tamara = [layer tileAt:ccp(0,11)];
-		NSLog(@"%@ vertexZ: %f", tamara, tamara.vertexZ);
-		[tamara retain];
-
-		id move = [CCMoveBy actionWithDuration:10 position:ccpMult( ccp(400,450), 1/CC_CONTENT_SCALE_FACTOR()) ];
-		id back = [move reverse];
-		id seq = [CCSequence actions:move, back, nil];
-		[tamara runAction: [CCRepeatForever actionWithAction:seq]];
-		
-		[self schedule:@selector(repositionSprite:)];
-		
-	}	
-	return self;
-}
-
--(void) dealloc
-{
-	[tamara release];
-	[super dealloc];
-}
-
--(void) repositionSprite:(ccTime)dt
-{
-	// tile height is 101x81
-	// map size: 12x12
-	CGPoint p = [tamara position];
-    p = CC_POINT_POINTS_TO_PIXELS(p);
-    
-	[tamara setVertexZ: -( (p.y+81) /81) ];
-}
-
--(void) onEnter
-{
-	[super onEnter];
-	
-	// TIP: 2d projection should be used
-	[[CCDirector sharedDirector] setProjection:kCCDirectorProjection2D];
-}
-
--(void) onExit
-{
-	// At exit use any other projection. 
-	//	[[CCDirector sharedDirector] setProjection:kCCDirectorProjection3D];
-	[super onExit];
-}
-
--(NSString *) title
-{
-	return @"TMX Ortho vertexZ";
 }
 
 -(NSString *) subtitle
