@@ -11,6 +11,7 @@ version 2.0-alpha XX-Jul-2011
 . [NEW] Macros: ccgl* replaced with ccGL*
 . [NEW] Math: Using kazmath for matrix and projection operations, and matrix GL stack
 . [NEW] Math: Using NEON Matrix Multiplication from Oolong project
+. [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
 . [NEW] Types: ccColor?B replaced with ccColor?UB
 . [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
 . [FIX] CCProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
